# openvision

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  cliff.toml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml  welcome.yml
src/: __init__.py
tests/: .pylintrc  test_example.py
