[project]
name = "openvision"
version = "0.2.0"  # 🚀 Enable dynamic versioning
description = "A modular and efficient computer vision toolkit"
authors = [{ name = "Saharsh Barve", email = "saharshbarve3@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
source = "git-tag"

[tool.git-cliff.changelog]
header = "# Changelog\n\n"
body = """
{% for version in versions %}
## {{ version.version }} - {{ version.date }}
{% for group, commits in version.commit_groups %}
### {{ group }}
{% for commit in commits %}
- {{ commit.message }}
{% endfor %}
{% endfor %}
{% endfor %}
"""
footer = "\n"

[tool.poetry.group.dev.dependencies]
pip-tools = "^7.4.1"
pre-commit = "^4.1.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"
python-dotenv = "^1.0.1"
git-cliff = "^2.8.0"
